<resources>
    <string name="app_name">TicTacToe</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_start_session">Start session</string>
    <string name="register_name_hint">Name</string>
    <string name="register_email_hint">Email</string>
    <string name="register_password_hint">Password</string>
    <string name="register_button_register">Register</string>
    <string name="login_go_to_register">Create account</string>
    <string name="register_name_error_length">Name must contains at least 3 characters and 15 like maximun</string>
    <string name="register_name_error_empty">Name is mandatory</string>
    <string name="register_email_error_empty">Email is mandatory</string>
    <string name="register_password_error_length">Password is mandatory</string>
    <string name="register_password_error_empty">Password is mandatory</string>
    <string name="login_email_error_empty">Email is mandatory</string>
    <string name="login_password_error_empty">Password is mandatory</string>
    <string name="login_password_error_length">Password must has at least 6 characters</string>
    <string name="register_error_on_register">Error on register</string>
    <string name="search_game_loading">Loading...</string>
    <string name="search_game_button_play">Play online</string>
    <string name="search_game_button_ranking">Show ranking</string>
    <string name="search_game_search_available_game">Searching available game</string>
    <string name="search_game_error_to_enter_on_a_game">Some error happens to enter on a game</string>
    <string name="search_game_creating_new_game">Creating new game</string>
    <string name="search_game_error_on_creating_game">Error on creating game</string>
    <string name="search_game_waiting_another_player">Waiting to another player</string>
    <string name="search_game_start_game">Player found. Starting game</string>
    <string name="game_player1">Player 1</string>
    <string name="game_player2">Player 2</string>
    <string name="game_error_on_get_data">Error on get data from server</string>
    <string name="game_game_has_end">Game has ended</string>
    <string name="game_it_not_your_turn">It is not your turn yet</string>
    <string name="game_select_an_empty_cell">Select an empty cell</string>
    <string name="game_game_over_dialog_title">Game over</string>
    <string name="game_game_over_dialog_possitive_button_text">Exit</string>
    <string name="game_game_over_dialog_one_points">+1 points</string>
    <string name="game_game_over_dialog_more_points">+%1$d points</string>
    <string name="game_game_over_information_draw">%1$s has tied and got %2$d</string>
    <string name="game_game_over_information_win">%1$s has won and got %2$d</string>
    <string name="game_game_over_information_lose">%1$s has lost</string>
    <string name="game_other_player_has_surrendered">The other player has
        surrendered. You win.
    </string>
</resources>
